Implemented first draft of the style/icons route.
